--- a/_layouts/noheadpage.html
+++ b/_layouts/noheadpage.html
@@ -6,6 +6,14 @@ layout: default
 
 <main class="main  container">
 
+  <article class="article  article--page  content  typeset">
+
+    <h1>{{ page.title }}</h1>
+
+    {{ content }}
+
+  </article>
+
   {% if page.aside == true %}{% include site-aside.html %}{% endif %}
 
 </main>
